# rp2040-spi-bootloader

./: .gitignore  CMakeLists.txt  README.md  combined.ld  main.c  standalone.ld
reboot/: CMakeLists.txt  reboot.c
reboot/include/bootloader/: reboot.h
